syntax = "proto3";

option go_package = "gitlab.com/tibwere/comunigo/proto";

package proto;

import "google/protobuf/empty.proto";


service Registration {
    rpc Sign(NewUser) returns (stream PeerInfo);
    rpc ExchangePeerInfoFromRegToSeq(stream PeerInfo) returns (google.protobuf.Empty);
}

message NewUser {
    string Username = 1;
}

message PeerInfo {
    string Username = 1;
    string Address = 2;
}

message Empty {}
